login, signup, css, db

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,7 +1,15 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
 %}
-
 <div>
-  <h1>Typing Web</h1>
+  <h1>Welcome to Typing Test.</h1>
+  <p>Try out our tests today to see your wpm! Sign up today.</p>
 </div>
+
+<div class="blue_keyboard"></div>
+<div class="s_half"></div>
+<button class="button" type="button" href="/sign-up">
+  <span>
+    <a href="/sign-up">Sign Up</a>
+  </span>
+</button>
 {% endblock content%}
