--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -1,12 +1,17 @@
 /* Define the main Navigation block */
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Quicksand&display=swap');
+:root{
+    --bgColor: #E5EFF9;
+    --textColor: #040100;
+    --buttonColor: #ff00f7;
+}
 .myNav {
     display: block;
     height: 40px;
     line-height: 38px;
     padding: 12px;
-    font-family: monospace;
+    font-family: 'Inter', sans-serif;
 }
-/* Remove bullets, margin and padding */
 .myNav ul {
     list-style: none;
     padding: 0;
@@ -14,22 +19,23 @@
 }
 .myNav li {
     float: left;
-    /* Or you can use display: inline; */
 }
-/* Define the block styling for the links */
 .myNav li a {
     display: inline;
     text-align: center;
     font-size: 20px;
     padding: 7px 10px;
-    color: rgb(229, 172, 82);
+    color: #040100;
     text-decoration: none;
 }
-/* This is optional, however if you want to display the active link differently apply a background to it */
+
+.myNav li>:hover {
+    text-decoration: underline;
+    text-decoration-color: #040100;
+}
 .myNav li a.active {
     background-color: #3786E1;
 }
-
 header svg{
     height:20px;
     background-color:aliceblue;
@@ -37,26 +43,156 @@ header svg{
     padding: 7px 10px;
 
 }
-
 div h1{
-    @import url('https://fonts.googleapis.com/css2?family=Quicksand&family=Roboto&display=swap');
-    padding-bottom: "20px";
-    font-size: 100px;
-    font-family: 'Roboto', sans-serif;
-    margin-block-start: 0em;
-    margin-block-end: 0em;
-    color: rgb(229, 172, 82);
-    font-weight:500;
-    padding:100px;
+    /* Welcome to Typing Test. */
+    position: absolute;
+    width: 647px;
+    left: 725px;
+    top: 220px;
+
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 52px;
+    line-height: 0px;
+
+    color: var(--textColor);
+
     }
-div {
-    /* Background pattern from Toptal Subtle Patterns */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5),
-    rgba(0, 0, 0, 0.5)),url("images/typing-4.jpg");
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    background-size: cover;
-    height:700px;
-    width: 1500x;
-    transition: all .4s ease;
-}
+    div p{
+        /* Try out our tests today to see your wpm! Sign up today. */
+        position: absolute;
+        width: 475px;
+        height: 47px;
+        left: 732px;
+        top: 307px;
+
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 28px;
+        line-height: 34px;
+
+        color: var(--textColor);
+    }
+    body {
+        background-color: var(--bgColor);
+    }
+
+    div.blue_keyboard {
+        position: absolute;
+        width: 500px;
+        height: 448px;
+        left: 120.82px;
+        top: 149.22px;
+
+        background: url(images/blue_icon.png);
+        border-radius: 6px;
+    }
+    div.s_half {
+        position: absolute;
+        width: 1397px;
+        height: 294px;
+        left: 0px;
+        top: 730px;
+        background: #ffffff;
+    }
+    .button {
+        position: absolute;
+        width: 215px;
+        height: 50px;
+        left: 732px;
+        top: 450px;
+
+        font-family: 'Inter';
+        font-size: 25px;
+        background-color: var(--buttonColor);
+        border-color: black;
+        border-radius: 10px;
+    }
+
+    .button span a{
+        text-decoration: none;
+        color: white;
+    }
+    .button span{
+        cursor: pointer;
+        display: inline-block;
+        position: relative;
+        transition: 0.5s;
+    }
+    .button span:after {
+        content: '\00bb';
+        position: absolute;
+        opacity: 0;
+        top: 0;
+        right: -20px;
+        transition: 0.5s;
+    }
+    .button:hover span {
+        padding-right: 25px;
+    }
+    .button:hover span:after {
+            opacity: 1;
+            right: 0;
+    }
+    .button:active {
+        box-shadow: 0 5px #ababab;
+        transform: translateY(4px);
+    }
+    .form-group input.form-control{
+        display: inline-block;
+
+        width: 97%;
+        padding: 10px 20px;
+        margin: 8px 0;
+        margin-left: 6px;
+        border-radius: 4px;
+        border: 1px solid #ccc;
+        
+        box-sizing: border-box;
+        font-family: 'Inter';
+    }
+    div.holder{
+        position: absolute;
+        background-color: white;
+        
+        padding: 20px;
+        padding-bottom: 50px;
+        padding-top: 60px;
+
+        width: 305px;
+        height: 270px;
+        border-radius: 5px;
+        margin-left: 480px;
+        margin-top:180px;
+        box-shadow:  0 7px #ababab;
+    }
+    form h2.welcomeHeader{
+        position: absolute;
+        font-family: 'Inter';
+        margin: 0 7px;
+        top: 20px;
+        margin-inline-start: 0px;
+    }
+    .holder .login-button {
+        position: absolute;
+        width: 302px;
+        height: 40px;
+        left: 25px;
+        bottom: 30px;
+
+        font-family: 'Inter';
+        font-size: 13px;
+        font-weight:100;
+        color: white;
+        background-color:var(--buttonColor);
+        
+
+        border-radius: 5px;
+        border-color: white;
+        border-style: none;
+    }
+    .holder .login-button:active {
+        border-style: dotted;
+    }
